--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 ---
 language: python
 python: "2.7"
-
+services:
+  - docker
 # Use the new container infrastructure
-sudo: false
+sudo: required
 
 # Install ansible
 addons:
